tests/invalid/min_non_numeric/main.py
x: bool = True
y: bool = False
z: bool = min(x, y)
